--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             
-            <div class="collapse navbar-collapse ms-auto mb-2 mb-lg-0" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
+            <div class="collapse navbar-collapse  " id="navbarNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item ms-5">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-5">
                         <a class="nav-link" href="#">Courses</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-5">
                         <a class="nav-link" href="#">Faculty</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ms-5">
                         <a class="nav-link" href="#">FAQ</a>
                     </li>
                 </ul>
