--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
             </button>
             
             <div class="collapse navbar-collapse  " id="navbarNav">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto fw-normal">
                     <li class="nav-item ms-5">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item ms-5">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a class="nav-link" href="#Courses">Courses</a>
                     </li>
                     <li class="nav-item ms-5">
-                        <a class="nav-link" href="#">Faculty</a>
+                        <a class="nav-link" href="#Faculty">Faculty</a>
                     </li>
                     <li class="nav-item ms-5">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="#FAQ">FAQ</a>
                     </li>
                 </ul>
             </div>
