--- a/index.html
+++ b/index.html
@@ -6,39 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./css/index.css" />
 
     <title>E-learning</title>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav>
       <div class="container">
-        <a class="navbar-brand" href="#">E-learning</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <div class="logo">
+          <h1></h1>
+        </div>
+        <div class="menu">
+          <ul>
+            <li>
+              <a href="#!">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Courses</a>
+            <li>
+              <a href="#!">Courses</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Faculty</a>
+            <li>
+              <a href="#!">Faculty</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">FAQ</a>
-            </li>
+            <button class="primary-btn">Login</button>
           </ul>
         </div>
       </div>
