--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/index.css" />
 
@@ -32,5 +37,51 @@
         </div>
       </div>
     </nav>
+
+    <!-- header -->
+    <div class="container hero">
+      <div class="row">
+        <div class="col-sm grid-left">
+          <h1>Learn on your</h1>
+          <h1>Schedule from</h1>
+          <h1>Anywhere</h1>
+          <div class="flex">
+            <div class="playstore">
+              <img src="./images/playstore.png" alt="" />
+              Download our App on Playstore
+            </div>
+            <div class="video">
+              <a href="#!">
+                Watch Video
+                <img src="./images/video.svg" alt="" />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm grid-right">
+          <img src="./images/hero-image.svg" alt="" />
+        </div>
+      </div>
+
+      <!-- courses -->
+      <div class="courses container">
+        <div class="row">
+          <div class="col-sm-6 grid-left">
+            <img src="./images/courses-img.png" alt="" />
+          </div>
+          <div class="col-sm-6 grid-right">
+            <h1>E-Learning Courses</h1>
+            <h1>for IIT-JEE & NEET</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+              expedita culpa quae minus exercitationem tempora aperiam rem
+              dignissimos? Recusandae placeat vitae impedit consectetur non ea
+              suscipit dolores, accusantium totam maxime?
+            </p>
+            <a href="#!" class="primary-btn">Register</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
