--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav>
       <div class="container">
         <div class="logo">
-          <h1></h1>
+          <img src="./images/logo.png" alt="" />
         </div>
         <div class="menu">
           <ul>
@@ -74,6 +74,7 @@
 
       <!-- courses -->
       <div class="courses container">
+        <h1 class="heading">Our Courses</h1>
         <div class="row">
           <div class="col-sm-6 grid-left">
             <img src="./images/courses-img.png" alt="" />
@@ -93,7 +94,8 @@
       </div>
     </div>
 
-    <section class="container" id="FAQ">
+    <section class="container faq" id="FAQ">
+      <h1 class="text-center">FAQ</h1>
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
@@ -115,11 +117,10 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is
-              shown by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              exercitationem ea doloremque rem magni ratione ex, distinctio
+              nulla eos reprehenderit aliquid molestiae in, sint asperiores
+              expedita velit, repellendus corrupti ullam.
             </div>
           </div>
         </div>
@@ -143,8 +144,9 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong>Yes, they are free. </strong> More details about the demo
-              classes will be provided by our counselor.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit,
+              impedit quisquam voluptas labore doloribus inventore eaque minima
+              a fuga iure?
             </div>
           </div>
         </div>
@@ -171,12 +173,10 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              If the screen is stuck or not loading further, please uninstall
-              and reinstall the app, making sure there’s an active internet
-              connection to do so. If you’re still facing the issue, please send
-              an email to support@byjus.com along with details of your device
-              and Operating System (OS) which will help us better troubleshoot
-              the issue.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              iusto, quos consectetur, amet dolorem nobis aperiam, architecto
+              nihil ullam asperiores molestiae. Minus ipsum consequatur
+              doloribus odit a ut nisi deleniti?
             </div>
           </div>
         </div>
